# one-bit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imaging.cpp  imaging.h  logging.cpp  logging.h  main.cpp  script_mode.cpp  script_mode.h  vcpkg_x64-linux.txt
.github/workflows/: ci_build.yml  codeql-analysis.yml
gui/: CMakeLists.txt  UiApplication.cpp  UiApplication.h
gui/resources/: ApplicationWindow.qml  InputImage.ui.qml  PreviewImage.ui.qml  StartPage.ui.qml  one-bit-resources.qrc
imaging/: CMakeLists.txt  FloodFillPixelator.cpp  FloodFillPixelator.h  Pixelator.cpp  Pixelator.h  ShrinkPixelator.cpp  ShrinkPixelator.h
qtgui/: CMakeLists.txt  QtPixelator.cpp  QtPixelator.h  ResultImage.cpp  ResultImage.h  SourceImage.cpp  SourceImage.h  UiApplication.cpp  UiApplication.h
qtgui/resources/: ApplicationWindow.qml  FileDisplay.qml  GridLines.qml  InputFileChooser.qml  PixelColorSettings.qml  PixelColors.qml  PixelSizes.qml  one-bit-resources.qrc  stixelator-resources.qrc
qtgui/resources/qml/: FileDisplay.qml
utilities/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Property.hpp  calculus.cpp  calculus.h  error_codes.h  logging.cpp  logging.h  setting_enums.h
